--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li class="nav-item"><a class="nav-link" href="dashboard.html">Dashboard (Huella)</a></li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="http://localhost:8501" target="_blank">
+                        <a class="nav-link" href="https://ecofuturoteam6.streamlit.app" target="_blank">
                             <i class="fas fa-chart-bar"></i> Eco-Datos Colombia
                         </a>
                     </li>
