Actualizar index.html arreglo de tamaño imágenes carrusel con vh-fix en el active

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="2"></button>
         </div>
         <div class="carousel-inner">
-            <div class="carousel-item active"
+            <div class="carousel-item active vh-fix"
                 style="background-image: url('https://images.pexels.com/photos/433308/pexels-photo-433308.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');">
                 <div class="carousel-caption">
                     <h1>Un Futuro Sostenible es Posible</h1>
