--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <a class="navbar-brand logo" href="index.html">
                 <i class="fas fa-leaf logo-icon"></i>
-                EcoFuturo
+                ConcienciaVerde
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -133,5 +133,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 
 </html>
